bible simbol css

--- a/src/stylesheets/links.css
+++ b/src/stylesheets/links.css
@@ -912,8 +912,7 @@
     content: "#️⃣"; 
     }
 
-.md-content a[href*="../Genesis"],
-.md-content a[href*="../Gen-"],
+.md-content a[href*="../Genesis"]::after,
 .md-content a[href*="../Gen-"]::after {
     content: "]]✝️"; 
     }
