--- a/src/stylesheets/links.css
+++ b/src/stylesheets/links.css
@@ -30,22 +30,23 @@
     }
     
 .md-content a[href*="../"]:hover {
-    color: darkseagreen;
+    color: darkgreen;
+	opacity: 0.825;
     }
 
+
 .md-content a[href*="../"]::after {
+    content: "";
     color: darkgreen;
-    background-image: url("/images/book-open-blank-variant.svg");
+    background-image: url(/images/book-open-blank-variant.svg);
     filter: invert(23%) sepia(21%) saturate(7448%) hue-rotate(95deg) brightness(92%) contrast(105%);
     background-repeat: no-repeat;
-    background-size: 0.75em;
-    background-position: right 1px top;
-    width: 0.825em;
-    height: 0.825em;
+    background-size: 0.99em;
+    width: 1em;
+    height: 1em;
     display: inline-block;
     vertical-align: baseline;
-    opacity: 0.825;
-    }
+}
 
 .md-content a[href*="../"]::before {
     color: darkgreen;
@@ -53,18 +54,17 @@
     }
 
 .md-content a[href*="../"]:hover::after {
+	content: ""; 
     color: darkgreen;
     background-image: url("/images/book-open-page-variant.svg");
     filter: invert(23%) sepia(21%) saturate(7448%) hue-rotate(95deg) brightness(92%) contrast(105%);
     background-repeat: no-repeat;
-    background-size: 0.75em;
-    background-position: right 1px top;
-    width: 0.825em;
-    height: 0.825em;
+    background-size: 0.99em;
+    width: 1em;
+    height: 1em;
     display: inline-block;
     vertical-align: baseline;
     opacity: 0.825;
-    opacity: 0.7;
     }
 
 .md-content a[href*="../"]:hover::before {
@@ -78,26 +78,28 @@
 .md-content a[href*="/tags.html#"]::before {
     content: "#️⃣"; 
     }
-
-.md-content a[href*="../Genesis"]::after,
+	
+.md-content a[href*="../Genesis"]::after, 
 .md-content a[href*="../Gen-"]::after {
     color: darkgreen;
-    content: ""; 
-    background-image: url("/images/bible.svg");
+    content: "";
+    background-image: url(/images/bible.svg);
     background-repeat: no-repeat;
-    background-size: 0.75em;
-    background-position: right 1px top;
-    width: 0.825em;
-    height: 0.825em;
+    background-size: 0.7em;
     display: inline-block;
     vertical-align: baseline;
-    opacity: 0.825;
-    }
-
-.md-content a[href*="../Genesis"]:hover:after,
+}
+.md-content a[href*="../Genesis"]:hover::after, 
 .md-content a[href*="../Gen-"]:hover::after {
-    opacity: 0.8;
-    }
+    color: darkgreen;
+    content: "";
+    background-image: url(/images/bible.svg);
+    background-repeat: no-repeat;
+    background-size: 0.7em;
+    display: inline-block;
+    vertical-align: baseline;
+	opacity: 0.7;
+}
 
 .md-content h2,
 .md-content h3,
@@ -152,6 +154,7 @@
 
 /* Facebook */
 .md-content a[href*="facebook.com"]::after {
+	content: ""; 
     background-image: url("/images/facebook.svg");
     background-repeat: no-repeat;
     /* WP is used on almost every page, so make an exception and inline it */
